[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/nnw.tpl.visual_dialogue_trees/main_screen/Nodes/DialogueNode.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/nnw.tpl.visual_dialogue_trees/main_screen/Nodes/FinishMissionScriptNodeController.gd" type="Script" id=2]

[node name="FinishMissionScriptNode" instance=ExtResource( 1 )]
margin_bottom = -33.0
title = "Finish Mission Script Node"
slot/0/right_enabled = false
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color( 1, 1, 1, 1 )
slot/1/right_enabled = true
slot/1/right_type = 1
slot/1/right_color = Color( 0.027451, 0.647059, 0.168627, 1 )
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color( 1, 1, 1, 1 )
slot/2/right_enabled = true
slot/2/right_type = 2
slot/2/right_color = Color( 1, 0, 0.164706, 1 )
script = ExtResource( 2 )

[node name="GridContainer" parent="." index="0"]
margin_bottom = 100.0

[node name="KeyLabel" parent="GridContainer" index="0"]
visible = false

[node name="Key" parent="GridContainer" index="1"]
visible = false
margin_left = 0.0
margin_right = 281.0

[node name="OptionLabel" parent="GridContainer" index="2"]
visible = false
margin_top = 121.0
margin_bottom = 135.0

[node name="OptionText" parent="GridContainer" index="3"]
visible = false

[node name="TextLabel" parent="GridContainer" index="4"]
visible = false
margin_top = 0.0
margin_right = 261.0
margin_bottom = 65.0

[node name="Text" parent="GridContainer" index="5"]
visible = false

[node name="CharacterLabel" parent="GridContainer" index="6"]
visible = false
margin_top = 97.0
margin_bottom = 111.0

[node name="CharacterChoice" parent="GridContainer" index="7"]
visible = false

[node name="MissionReqsLabel" parent="GridContainer" index="8"]
visible = false
margin_top = 3.0
margin_right = 49.0
margin_bottom = 17.0

[node name="MissionReqs" parent="GridContainer" index="9"]
visible = false
margin_left = 53.0
margin_top = 0.0
margin_right = 263.0
margin_bottom = 20.0

[node name="ScriptLabel" parent="GridContainer" index="10"]
margin_top = 33.0
margin_bottom = 47.0

[node name="Script" parent="GridContainer" index="11"]
margin_top = 0.0
margin_right = 281.0
margin_bottom = 24.0
text = "finish_mission"
editable = false

[node name="MissionChooserLabel" type="Label" parent="GridContainer" index="12"]
margin_top = 3.0
margin_right = 118.0
margin_bottom = 17.0
text = "Starting Mission:"

[node name="MissionChooser" type="OptionButton" parent="GridContainer" index="13"]
margin_left = 122.0
margin_right = 362.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "createAvatar"
selected = 0

[node name="ReloadInventoryLabel" type="Label" parent="GridContainer" index="14"]
margin_top = 29.0
margin_right = 118.0
margin_bottom = 43.0
text = "Reload Inventory?:"

[node name="ReloadInventoryCheck" type="CheckBox" parent="GridContainer" index="15"]
margin_left = 122.0
margin_top = 24.0
margin_right = 362.0
margin_bottom = 48.0

[node name="DialogueFileLabel" type="Label" parent="GridContainer" index="16"]
margin_top = 57.0
margin_right = 118.0
margin_bottom = 71.0
text = "Dialogue File:"

[node name="DialogueFileInput" type="LineEdit" parent="GridContainer" index="17"]
margin_left = 122.0
margin_top = 52.0
margin_right = 362.0
margin_bottom = 76.0

[node name="Finish Node" type="Label" parent="." index="1"]
margin_left = 16.0
margin_top = 101.0
margin_right = 378.0
margin_bottom = 115.0
text = "Finish Mission Node"
align = 2

[node name="Fail Node" type="Label" parent="." index="2"]
margin_left = 16.0
margin_top = 116.0
margin_right = 378.0
margin_bottom = 130.0
text = "Fail Mission Node"
align = 2
[connection signal="text_changed" from="GridContainer/Script" to="." method="_on_Script_text_changed"]
[connection signal="item_selected" from="GridContainer/MissionChooser" to="." method="_on_MissionChooser_item_selected"]
[connection signal="toggled" from="GridContainer/ReloadInventoryCheck" to="." method="_on_ReloadInventoryCheck_toggled"]
[connection signal="text_changed" from="GridContainer/DialogueFileInput" to="." method="_on_DialogueFileInput_text_changed"]
